// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BackerCard /> by default matches with snapshot 1`] = `
<div
  className="sc-AxiKw cnwqSJ"
>
  <div
    className="sc-AxjAm iBjINj"
  >
    <span
      className="sc-AxirZ ktnnZK k-u-color-font1 k-u-line-height-normal k-u-size-tiny k-u-weight-regular"
    >
      Backer name
    </span>
  </div>
  <div
    className="sc-AxjAm hYYmlx"
  >
    <span
      className="k-ButtonImage k-ButtonImage--huge k-ButtonImage--withoutPointerEvents sc-AxhUy bbvGL"
      tabIndex={null}
    >
      <img
        alt=""
        className="k-ButtonImage__img"
        src="#custom-src"
      />
    </span>
  </div>
  <div
    className="sc-AxjAm jVHGNP"
  >
    <p
      className="sc-AxirZ ktnnZK k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-light k-u-margin-none"
    >
      Description
    </p>
  </div>
</div>
`;

exports[`<BackerCard /> with subtitle prop matches with snapshot 1`] = `
<div
  className="sc-AxiKw cnwqSJ"
>
  <div
    className="sc-AxjAm iBjINj"
  >
    <span
      className="sc-AxirZ ktnnZK k-u-color-font1 k-u-line-height-normal k-u-size-tiny k-u-weight-regular"
    >
      Backer name
      <span
        className="sc-AxirZ ktnnZK k-u-color-font1 k-u-size-micro k-u-weight-light sc-AxhCb rsnXM"
      >
        Subtitle
      </span>
    </span>
  </div>
  <div
    className="sc-AxjAm hYYmlx"
  >
    <span
      className="k-ButtonImage k-ButtonImage--huge k-ButtonImage--withoutPointerEvents sc-AxhUy bbvGL"
      tabIndex={null}
    >
      <img
        alt=""
        className="k-ButtonImage__img"
        src="#custom-src"
      />
    </span>
  </div>
  <div
    className="sc-AxjAm jVHGNP"
  >
    <p
      className="sc-AxirZ ktnnZK k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-light k-u-margin-none"
    >
      Description
    </p>
  </div>
</div>
`;
